--- a/index.html
+++ b/index.html
@@ -1,35 +1,36 @@
 <!DOCTYPE html>
-<html>
+<html ng-app="myApp">
 <head>
   <title>Angular Friends</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css">
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
-<body>
+<body ng-controller="friendCtrl">
   <h1>The <strong>facebook</strong> Friend Machine</h1>
 
   <div class="friends">
     <form class="form-inline searchForm" role="form">
       <div class="form-group">
-        <input class="form-control" placeholder="Search Anything About Your Friends">
+        <input class="form-control" ng-model="friendFilter.name" placeholder="Search Name">
+        <input class="form-control" ng-model="friendFilter.location.state" placeholder="Search State">
 
-        <select class="input-medium">
-          <option>Name</option>
-          <option>#Friends</option>
-          <option>City</option>
-          <option>State</option>
-          <option>Country</option>
+        <select class="input-medium" ng-model="sortProp">
+          <option value="name">Name</option>
+          <option value="friend_count">#Friends</option>
+          <option value="location.city">City</option>
+          <option value="location.state">State</option>
+          <option value="location.country">Country</option>
         </select>
 
-        <select class="input-medium">
+        <select class="input-medium" ng-model="sortDirection">
           <option value="-">Descending</option>
           <option value="+">Ascending</option>
         </select>
       </div>
     </form>
 
-    <ul>
+    <!-- <ul>
       <li class='friend'>
         <img class="profile-pic" src='http://placebear.com/50/50.jpg'>
         <h3>Cali Fornia</h3>
@@ -43,11 +44,32 @@
           Friends: 1,367
         </div>
       </li>
+    </ul> -->
+
+    <ul ng-repeat="friend in friends | filter: friendFilter | orderBy: sortDirection + sortProp">
+      <li class='friend'>
+        <img class="profile-pic" ng-src={{friend.pic_square}}>
+        <h3>{{friend.name}}</h3>
+        <div class="location" ng-if="friend.location">
+          Location: <span ng-if="friend.location.city">{{friend.location.city}}</span>, <span>{{friend.location.state}}</span>, <span>{{friend.location.country}}</span>
+        </div>
+        <div class="status" ng-if="friend.status">
+          Status: {{friend.status}}
+        </div>
+        <div class="num-friends">
+          Friends: {{friend.friend_count}}
+        </div>
+      </li>
     </ul>
+
+
   </div>
 
   <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.2/angular.js" charset="utf-8"></script>
+  <script src="app.js" charset="utf-8"></script>
+  <script src="friendCtrl.js" charset="utf-8"></script>
   <!-- your scripts here -->
 </body>
 </html>
